-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.7.3, 6.8.3, 6.9.0
-
None
-
-
5d8eeb6a2 (dev), 0c08d9d1f (6.9), 92b1c6bdd (tqtc/lts-6.8), fdec9d51e (tqtc/lts-6.5)
Application freezes when trigger an Action's shortcut in sub-sub Menu
Minimal reproducer:
import QtQuick import QtQuick.Controls Window { id: window width: 320 height: 400 visible: true Menu { Menu { Menu { Action { shortcut: StandardKey.Copy } } } } }
Just run it and press Ctrl+C (Cmd+C) shortcut.
For Gerrit Dashboard: QTBUG-135965 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
639713,6 | QQuickMenu: fix infinite loop with Action shortcut in nested sub-menus | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
640203,2 | QQuickMenu: fix infinite loop with Action shortcut in nested sub-menus | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
640279,2 | QQuickMenu: fix infinite loop with Action shortcut in nested sub-menus | 6.8 | qt/qtdeclarative | Status: ABANDONED | +2 | 0 |
642418,2 | QQuickMenu: fix infinite loop with Action shortcut in nested sub-menus | tqtc/lts-6.8 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |
642903,4 | QQuickMenu: fix infinite loop with Action shortcut in nested sub-menus | tqtc/lts-6.5 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |