QQuickMenu: fix infinite loop with Action shortcut in nested sub-menus

51ad5091929c7f2c4bab94fab9fa1c20996a6efa forgot to set parentMenu
in the loop.

Fixes: QTBUG-135965
Change-Id: I56ad611a6dd6e9f978ce3da5cc28e02d8f2b1a1a
Reviewed-by: Santhosh Kumar <santhosh.kumar.selvaraj@qt.io>
(cherry picked from commit 5d8eeb6a2315d29d6b03d9df7eb82adc3f1e37f9)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 0c08d9d1f6a645e645d4c93f61d1cda76bb1a798)
(cherry picked from commit 92b1c6bddc795fc6e631384f54d859d970d01aae)