tests/auto/quickcontrols/qquickmenu/tst_qquickmenu.cpp
@@ -95,6 +95,7 @@ private slots:
     void customMenuUseRepeaterAsTheContentItem();
     void invalidUrlInImgTag();
     void mousePropagationWithinPopup();
+    void shortcutInNestedSubMenuAction();
 };
 
 tst_QQuickMenu::tst_QQuickMenu()
@@ -2363,6 +2364,20 @@ void tst_QQuickMenu::mousePropagationWithinPopup()
         QTest::mouseClick(window, Qt::LeftButton, Qt::NoModifier, gapPoint);
         QCOMPARE(clickedSpy.size(), 0);
     }
+}
+
+void tst_QQuickMenu::shortcutInNestedSubMenuAction()
+{
+    QQuickControlsApplicationHelper helper(this, QLatin1String("shortcutInNestedSubMenuAction.qml"));
+    QVERIFY2(helper.ready, helper.failureMessage());
+    QQuickApplicationWindow *window = helper.appWindow;
+    window->show();
+    window->requestActivate();
+    QVERIFY(QTest::qWaitForWindowActive(window));
+
+    // Shouldn't result in an infinite loop.
+    QTest::keyClick(window, Qt::Key_C, Qt::ControlModifier);
+    QCOMPARE(window->property("triggeredCount").value<int>(), 1);
 }
 
 QTEST_QUICKCONTROLS_MAIN(tst_QQuickMenu)
